--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
-body {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -16,9 +19,9 @@ code {
 @tailwind components;
 @tailwind utilities;
 
-
+*/
 img, video {
 
   width: 100%;
   height: auto;
-}
+} 
